--- a/web_sıte/index.html
+++ b/web_sıte/index.html
@@ -14,6 +14,11 @@
             <span class="milliyet">Milliyet Gazetesi</span>
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.hurriyet.com.tr/">
+            <span class="hurriyet">Hurriyet Gazetesi</span>
+          </a>
+        </li>
       </ul>
     </div>
   </body>
